# ium-long-stay-patterns

./: LICENSE  Makefile  README.md  pyproject.toml
data/processed/: listings.csv  listings_stats.csv
docs/: mkdocs.yml
docs/docs/: index.md
ium_long_stay_patterns/: __init__.py  config.py  dataset.py  features.py  plots.py
ium_long_stay_patterns/modeling/: predict.py  train.py
ium_long_stay_patterns/src/: correlation_matrix.py  helper_methods.py  main.py  naive_solver.py  run_naive.py  split_file.sh
ium_long_stay_patterns/src/helpers/: create_listing_stats_dataset.py  create_numerical_dataset.py  data_loaders.py  plotting.py
models/: binary.py  naive.py  xgBoost.py
notebooks/: amenities_processing.ipynb  amenities_standarisation.ipynb  analyze_numeric_data.ipynb  classification_numeric_data.ipynb  classification_on_numeric_dataset.ipynb  listing_stats.ipynb  listings_with_amenities.csv  parameters_tuning.ipynb
prediction_service/: Dockerfile  ab_test.py  analyze_logs.py  app.py  logs.txt  test.py
prediction_service/logs/: logs.txt  logs_ab.txt
prediction_service/test_data/: X_test_raw.csv  test_ab_data.csv  test_targets_1.json
reports/: analyze_logs.md  naive_results_bookings.json  question.md  stage_1_outline.md
reports/figures/: analyze.txt  metrics_summary.csv  metrics_summary_comparison.csv  naive_results_bookings.md  naive_results_listings.json  naive_results_listings.md
reports/tasks/: question.md
saved_models/: binary_classifier_model.pth  binary_scaler.joblib  naive_classifier_model.pth
