[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ium_long_stay_patterns"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mateusz Matukiewicz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ium_long_stay_patterns"]
force_sort_within_sections = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

